# dream

./: .gitignore  CMakeLists.txt
etc/: setenv
log/: CMakeLists.txt
log/include/: log.h
log/src/: log.cpp
selfMq/: CMakeLists.txt
selfMq/include/: core.h  mq.h
selfMq/src/: mq.cpp
sys/: CMakeLists.txt
sys/include/: system.h
sys/src/: system.cpp
test/: main.cpp
